--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,12 @@ env:
   commonjs: true
   es2021: true
   node: true
+  jest: true
 extends: airbnb-base
 parserOptions:
   ecmaVersion: latest
-rules: {}
+rules: {
+ linebreak-style: off,
+ no-underscore-dangle: off,
+ class-methods-use-this: off
+}
