--- a/compose.yaml
+++ b/compose.yaml
@@ -8,36 +8,35 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
-    build:
-      context: .
-    environment:
-      NODE_ENV: production
-    ports:
-      - 8000:8000
+  # server:
+  #   build:
+  #     context: .
+  #   environment:
+  #     NODE_ENV: production
+  #   ports:
+  #     - ${PORT}:8000
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
+  # The commented out section below is an example of how to define a PostgreSQL
+  # database that your application can use. `depends_on` tells Docker Compose to
+  # start the database before your application. The `db-data` volume persists the
+  # database data between container restarts. The `db-password` secret is used
+  # to set the database password. You must create `db/password.txt` and add
+  # a password of your choosing to it before running `docker-compose up`.
+  #     depends_on:
+  #       db:
+  #         condition: service_healthy
   db:
     image: postgis/postgis
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
     environment:
-      POSTGRES_DB: hackathon
-      POSTGRES_USER: postgres # The PostgreSQL user (useful to connect to the database)
-      POSTGRES_PASSWORD: password # The PostgreSQL password (useful to connect to the database)
-    expose:
-      - 5432
+      POSTGRES_DB: ${PGDATABASE}
+      POSTGRES_USER: ${PGUSER} # The PostgreSQL user (useful to connect to the database)
+      POSTGRES_PASSWORD: ${PGPASSWORD} # The PostgreSQL password (useful to connect to the database)
+    ports:
+      - ${PGPORT}:5432
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: ['CMD', 'pg_isready']
       interval: 10s
       timeout: 5s
       retries: 5
-
