--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "brcypt": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "instances-container": "^2.0.6",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   },
   "devDependencies": {
