--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ PGDATABASE_TEST=hack4id_test
 PGPORT_TEST=5432
 
 # TOKENIZE
+# require('crypto').randomBytes(64).toString('hex');
 ACCESS_TOKEN_KEY=
 REFRESH_TOKEN_KEY=
 ACCCESS_TOKEN_AGE=
