--- a/compose.yaml
+++ b/compose.yaml
@@ -40,3 +40,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
