--- a/compose.yaml
+++ b/compose.yaml
@@ -8,13 +8,15 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  # server:
-  #   build:
-  #     context: .
-  #   environment:
-  #     NODE_ENV: production
-  #   ports:
-  #     - ${PORT}:8000
+  server:
+    build:
+      context: .
+    environment:
+      NODE_ENV: production
+    ports:
+      - ${PORT}:8000
+    env_file:
+      - .env
 
   # The commented out section below is an example of how to define a PostgreSQL
   # database that your application can use. `depends_on` tells Docker Compose to
