--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "NODE_ENV=production node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "jest --setupFiles --coverage dotenv/config -i",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config -i",
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "instances-container": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
@@ -32,6 +33,7 @@
     "eslint-plugin-import": "^2.28.1",
     "jest": "^29.7.0",
     "node-pg-migrate": "^6.2.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
